SOLVED: Align CSS  Styling with design mockup
Refactor the CSS styles to achieve visual consistency with the design mockup. The changed include adjustments to layout, colors, fonts, and other styling elements to ensure thet the web page now reflects the intended design

--- a/main.css
+++ b/main.css
@@ -8,6 +8,9 @@
     /* Phase 1 */
 
     /* Your code here */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .example2 {
@@ -18,6 +21,9 @@
     /* Phase 2 */
 
     /* Your code here */
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .example2 > button {
@@ -47,12 +53,20 @@
     /* Phase 3 */
 
     /* Your code here */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-basis: 33.33333%;
+    align-items: flex-end;
 }
 
 .example4 {
     /* Phase 4 - Part 1 of 2 */
 
     /* Your code here */
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center;  */
 }
 
 .sidebar {
@@ -62,6 +76,8 @@
     /* Phase 4 - Part 2 of 2 */
 
     /* Your code here */
+    display: flex;
+    flex-direction: column;
 }
 .content-area {
     background-color: #E8EFF0;
